--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
             </div>
           </div>
           
-          <div class="platform-card" data-platform="android" data-link="https://files.getmodsapk.com/ROOT/All%20Documents%20File/Folder%2021/NARUTO/Naruto-Ultimate-Ninja-Storm-v1.2.7-MOD-GMA-(Getmodsapk.com).apk">
+          <div class="platform-card" data-platform="android" data-link="https://getmodsapk.com/dl-track/naruto-mod-apk/191528/">
             <div class="platform-icon">
               <i class="fab fa-android"></i>
             </div>
@@ -1167,7 +1167,7 @@
             </div>
           </div>
           
-          <div class="platform-card" data-platform="ios" data-link="https://files.getmodsapk.com/ROOT/All%20Documents%20File/Folder%2021/NARUTO/Naruto-Ultimate-Ninja-Storm-v1.2.7-MOD-GMA-(Getmodsapk.com).apk">
+          <div class="platform-card" data-platform="ios" data-link="https://getmodsapk.com/dl-track/naruto-mod-apk/191528/">
             <div class="platform-icon">
               <i class="fab fa-apple"></i>
             </div>
